--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,8 @@ html {
 body {
   font-family: "Roboto", sans-serif;
 }
+@media screen and (max-width: 600px) {
+  body{
+      font-size: 15px;
+  }
+}
