--- a/src/components/About.css
+++ b/src/components/About.css
@@ -38,4 +38,8 @@ padding: 20px;
 .tabella-orari tr td{
     padding: 10px;
 }
-
+@media screen and (max-width: 600px) {
+    .about-wrap{
+        flex-direction: column !important;
+    }
+}
