--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,3 +5,8 @@
     align-items: center;
     justify-content: center;
 }
+@media screen and (max-width: 600px) {
+    .footer-wrapper label{
+        font-size: 13px;
+    }
+}
