--- a/src/components/SidebarOpenButton.css
+++ b/src/components/SidebarOpenButton.css
@@ -11,6 +11,7 @@
   background-color: rgb(255, 255, 255);
   background: #e0e0e0;
   display: none;
+  color: black;
 }
 @media screen and (max-width: 800px){
     .open_button{
